--- a/AntGame-android/AndroidManifest.xml
+++ b/AntGame-android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alex.antgame"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="v0.2.3" >
 
     <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="19" />
 
